# Memory.swift

./: .gitattributes  .gitignore  Package.resolved  Package.swift  README.md  cursor_memory_system_and_eval_improveme.md
Autoresearch/: .gitignore  README.md  prepare.py  program.md  pyproject.toml  results.tsv  train.py
Autoresearch/CreateML/: mlx_typing_balanced_eval.json  typing_balanced_summary.json  typing_split_summary.json  typing_test_balanced_createml.csv  typing_test_createml.csv  typing_test_split_createml.csv  typing_train_balanced_createml.csv  typing_train_createml.csv  typing_train_split_createml.csv
Autoresearch/CreateML/EntityTopicTagger.mlproj/: Project.json
Autoresearch/CreateML/EntityTopicTagger.mlproj/Model Containers/: EntityTopicTagger 1.json
Autoresearch/CreateML/TypingClassifier.mlproj/: Project.json
Autoresearch/CreateML/TypingClassifier.mlproj/Data Sources/: typing_test_balanced_createml.csv.json  typing_test_createml.csv.json  typing_test_split_createml.csv.json  typing_train_balanced_createml.csv.json  typing_train_createml.csv.json  typing_train_split_createml.csv.json
Autoresearch/CreateML/TypingClassifier.mlproj/Model Containers/: Balanced BERT 20 Iterations.json  Balanced BERT 40 Iterations.json  Balanced BERT 80 Iterations.json  Balanced BERT.json  Balanced.json  Heavy Factual BERT 80 Iterations.json  Heavy Factual.json
Autoresearch/memory_autoresearch/: __init__.py  cache.py  checkpoints.py  config.py  data.py  eval.py  export.py  modeling.py  scoring.py  tokenization.py  training.py  upstream.py
Evals/: README.md  (+3 more)
(+208 files in other folders)
