[project]
name = "memory-swift-autoresearch"
version = "0.1.0"
description = "MLX-first autonomous optimizer for Memory.swift CoreML retrieval artifacts"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "coremltools>=8.1",
    "huggingface-hub>=0.30.0",
    "mlx>=0.30.0",
    "numpy>=2.2.6",
    "requests>=2.32.0",
    "torch>=2.6.0",
    "transformers>=4.52.0",
]
